--- a/index.html
+++ b/index.html
@@ -25,18 +25,20 @@
                     don't hestiate to contact me.
 
                 </div>
-                <ul>
-                    <li><a href=""><img src="images/Disabled.png" alt="linked in"></a></li>
-                    <li><a href=""><img src="images/Enabled.png" alt=""></a></li>
-                    <li><a href=""><img src="images/GitHub.png" alt="git hub"></a></li>
-                    <li><a href=""><img src="images/Twitter.png" alt="twitter"></a></li>
-                    <li><a href=""><img src="images/micro.png" alt=""></a></li>
-
-                </ul>
-
             </div>
+            <ul>
+                <li><a href=""><img src="images/Disabled.png" alt="linked in"></a></li>
+                <li><a href=""><img src="images/Enabled.png" alt=""></a></li>
+                <li><a href=""><img src="images/GitHub.png" alt="git hub"></a></li>
+                <li><a href=""><img src="images/Twitter.png" alt="twitter"></a></li>
+                <li><a href=""><img src="images/micro.png" alt=""></a></li>
+
+            </ul>
+
+
         </section>
-               <!-- Work section -->
+        <!-- Work section -->
+
         <div class="container">
             <div class="projects">
                 <h3 class="recent-text">My Recent Works
@@ -56,7 +58,7 @@
                     </ul>
                     <button class="recent-work-button" type="button">See project</button>
                 </div>
-              
+
             </div>
             <div class="projects">
                 <div class="stories-container">
@@ -144,7 +146,57 @@
                 </div>
                 <button type="button">See project</button>
             </div>
+        </div>
+        <!-- About me section -->
+        <div class="about-me-container">
+            <div class="about-me">
+                <div class="supporting-text">
+                    <h2>About Me</h2>
+                    <p class="p-description">Hello I'm a software developer! I can help you build a product , feature or
+                        website Look through some of my work and experience! If you like what you see and have a project
+                        you
+                        need coded, don't hestiate to contact me.</p>
+                </div>
+                <button class="resume-button" type="button">Get My Resume</button>
+                <img class="vector-4" src="images/Vector-4.png" alt="">
+            </div>
 
+            <div class="language">
+                <img src="images/Rectangle-55.png" alt="">
+                <ul class="p-language">
+                    <li>Language</li>
+                </ul>
+            </div>
+            <ul class="language-list">
+                <li>CSS</li>
+                <li>HTML</li>
+                <li>Javascript</li>
+            </ul>
+            <div class="language">
+                <img src="images/Rectangle-56.png" alt="">
+                <ul class="p-language">
+                    <li>Frameworks</li>
+                </ul>
+            </div>
+            <ul class="language-list">
+                <li>Bootstrap</li>
+                <li>Ruby on Rails </li>
+                <li>RSpec</li>
+
+            </ul>
+            <div class="language">
+                <img src="images/Rectangle-57.png" alt="">
+                <ul class="p-language">
+                    <li>Skills</li>
+                </ul>
+            </div>
+            <ul class="language-list">
+                <li>codekit</li>
+                <li>Github</li>
+                <li>codepen</li>
+                <li>Gitlab</li>
+                <li>Terminal</li>
+            </ul>
 
         </div>
     </main>
