--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <section class="headline">
             <div class="supporting-text">
-                <h2>Hey There. I'm Johnson</h2>
+                <h2 class="greeting">Hey There. I'm Johnson</h2>
                 <p class="introduction-text"> I'm a software developer <br /></p>
                 <div class="description">
                     I can help you build a product , feature or website Look through
@@ -26,7 +26,7 @@
 
                 </div>
             </div>
-            <ul>
+            <ul class="links">
                 <li><a href=""><img src="images/Disabled.png" alt="linked in"></a></li>
                 <li><a href=""><img src="images/Enabled.png" alt=""></a></li>
                 <li><a href=""><img src="images/GitHub.png" alt="git hub"></a></li>
@@ -150,53 +150,68 @@
         <!-- About me section -->
         <div class="about-me-container">
             <div class="about-me">
-                <div class="supporting-text">
-                    <h2>About Me</h2>
+                <div class="support-text">
+                    <h2 class="about-h">About Me</h2>
                     <p class="p-description">Hello I'm a software developer! I can help you build a product , feature or
                         website Look through some of my work and experience! If you like what you see and have a project
                         you
-                        need coded, don't hestiate to contact me.</p>
+                        need coded, don't hestiate to contact me.
+                    </p>
+                    <button class="resume-button" type="button">Get My Resume</button>
+                    <img class="vector-4" src="images/Vector-4.png" alt="">
                 </div>
-                <button class="resume-button" type="button">Get My Resume</button>
-                <img class="vector-4" src="images/Vector-4.png" alt="">
+
+
+            </div>
+            <div class="big-container">
+                <div class="skills-container">
+                    <div class="language knowledge">
+                        <img src="images/Rectangle-55.png" alt="">
+                        <ul class="p-language">
+                            <li>Language</li>
+                        </ul>
+                    </div>
+                    <ul class="language-list">
+                        <li>CSS</li>
+                        <li>HTML</li>
+                        <li>Javascript</li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="skills-container">
+                    <div class="language framework">
+                        <img src="images/Rectangle-56.png" alt="">
+                        <ul class="p-language frame">
+                            <li>Frameworks</li>
+                        </ul>
+                    </div>
+                    <ul class="language-list">
+                        <li>Bootstrap</li>
+                        <li>Ruby on Rails </li>
+                        <li>RSpec</li>
+                        <li>Capy Bara</li>
+                        <li>Selenium</li>
+
+                    </ul>
+                </div>
+                <div class="skills-container">
+                    <div class="language skills">
+                        <img src="images/Rectangle-57.png" alt="">
+                        <ul class="p-language">
+                            <li>Skills</li>
+                        </ul>
+                    </div>
+                    <ul class="language-list">
+                        <li>codekit</li>
+                        <li>Github</li>
+                        <li>codepen</li>
+                        <li>Gitlab</li>
+                        <li>Terminal</li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="language">
-                <img src="images/Rectangle-55.png" alt="">
-                <ul class="p-language">
-                    <li>Language</li>
-                </ul>
-            </div>
-            <ul class="language-list">
-                <li>CSS</li>
-                <li>HTML</li>
-                <li>Javascript</li>
-            </ul>
-            <div class="language">
-                <img src="images/Rectangle-56.png" alt="">
-                <ul class="p-language">
-                    <li>Frameworks</li>
-                </ul>
-            </div>
-            <ul class="language-list">
-                <li>Bootstrap</li>
-                <li>Ruby on Rails </li>
-                <li>RSpec</li>
 
-            </ul>
-            <div class="language">
-                <img src="images/Rectangle-57.png" alt="">
-                <ul class="p-language">
-                    <li>Skills</li>
-                </ul>
-            </div>
-            <ul class="language-list">
-                <li>codekit</li>
-                <li>Github</li>
-                <li>codepen</li>
-                <li>Gitlab</li>
-                <li>Terminal</li>
-            </ul>
 
         </div>
     </main>
