--- a/index.html
+++ b/index.html
@@ -219,15 +219,15 @@
                     <ul class="form">
                         <li>
                             <label for="name"></label>
-                            <input type="text" name="name" class="no-border name" minlength="1" maxlength="30" placeholder="Full name" required>
+                            <input type="text" id="name" name="name" class="no-border name" minlength="1" maxlength="30" placeholder="Full name" required>
                         </li>
                         <li>
                             <label for="email"></label>
-                            <input type="email" name="email" class="no-border email" placeholder="Enter email adress" required>
+                            <input type="email" name="email" id="email" class="no-border email" placeholder="Enter email adress" required>
                         </li>
                         <li>
                             <label for="msg"></label>
-                            <textarea name="message" id="" class="msg" minlength="1" maxlength="500" required placeholder="Enter text here"></textarea>
+                            <textarea name="message" id="msg" class="msg" minlength="1" maxlength="500" required placeholder="Enter text here"></textarea>
                         </li>
                     </ul>
                     <button class="form-button" type="submit">Get in touch</button>
