--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <!-- About me section -->
         <div class="about-me-container">
-            <div class="about-me">
+            <div class="about-me mobile">
                 <div class="support-text">
                     <h2 class="about-h">About Me</h2>
                     <p class="p-description">Hello I'm a software developer! I can help you build a product , feature or
