updae index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
 
         <div class="container">
-            <div class="projects">
+            <div class="projects desktop">
                 <div class="stories-container">
                     <h4 class="stories-head">Professional Art Printing Data</h4>
                     <p class="p-text">A daily selection of privately personalized reads;
