--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="">Portfolio</a>
             <a href="">About</a>
             <a href="">Contact</a>
-            <a href=""><img class="msg-icon" src="images/msg-icon.png" alt=""></a>
+            <a href=""><img class="msg-icon" src="images/msg-icon.png" alt="msg-icon"></a>
         </nav>
     </header>
     <main>
@@ -25,10 +25,10 @@
         <section class="headline">
             <ul class="desktop-links">
                 <li><a href=""><img src="images/Disabled.png" alt="linked in"></a></li>
-                <li><a href=""><img src="images/Enabled.png" alt=""></a></li>
+                <li><a href=""><img src="images/Enabled.png" alt="Enabled"></a></li>
                 <li><a href=""><img src="images/GitHub.png" alt="git hub"></a></li>
                 <li><a href=""><img src="images/Twitter.png" alt="twitter"></a></li>
-                <li><a href=""><img src="images/micro.png" alt=""></a></li>
+                <li><a href=""><img src="images/micro.png" alt="micro"></a></li>
 
             </ul>
             <div class="supporting-text">
@@ -43,10 +43,10 @@
             </div>
             <ul class="links">
                 <li><a href=""><img src="images/Disabled.png" alt="linked in"></a></li>
-                <li><a href=""><img src="images/Enabled.png" alt=""></a></li>
+                <li><a href=""><img src="images/Enabled.png" alt="Enabled"></a></li>
                 <li><a href=""><img src="images/GitHub.png" alt="git hub"></a></li>
                 <li><a href=""><img src="images/Twitter.png" alt="twitter"></a></li>
-                <li><a href=""><img src="images/micro.png" alt=""></a></li>
+                <li><a href=""><img src="images/micro.png" alt="Disabled"></a></li>
 
             </ul>
 
@@ -61,7 +61,7 @@
                 </h3>
                 <div class="recentworks">
                     <div class="orange-image"><img src="images/Img-Placeholder.png" alt="orange image"></div>
-                    <div class="desktop-orange-image"> <img src="images/orange-image.png" alt=""> </div>
+                    <div class="desktop-orange-image"> <img src="images/orange-image.png" alt="orange image"> </div>
                     <div class="orange-container">
                         <h4>Multi-Post Stories</h4>
                         <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups
@@ -182,7 +182,7 @@
                         need coded, don't hestiate to contact me.
                     </p>
                     <button class="resume-button" type="button">Get My Resume</button>
-                    <img class="vector-4" src="images/Vector-4.png" alt="">
+                    <img class="vector-4" src="images/Vector-4.png" alt="thin line">
                 </div>
 
 
@@ -190,7 +190,7 @@
             <div class="big-container">
                 <div class="skills-container">
                     <div class="language knowledge">
-                        <img src="images/Rectangle-55.png" alt="">
+                        <img src="images/Rectangle-55.png" alt="rectangle">
                         <ul class="p-language">
                             <li>Language</li>
                         </ul>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="skills-container">
                     <div class="language framework">
-                        <img src="images/Rectangle-56.png" alt="">
+                        <img src="images/Rectangle-56.png" alt="rectangle 56">
                         <ul class="p-language frame">
                             <li>Frameworks</li>
                         </ul>
@@ -220,7 +220,7 @@
                 </div>
                 <div class="skills-container">
                     <div class="language skills">
-                        <img src="images/Rectangle-57.png" alt="">
+                        <img src="images/Rectangle-57.png" alt="Rectangle-57">
                         <ul class="p-language">
                             <li>Skills</li>
                         </ul>
@@ -276,11 +276,11 @@
 
             <img class="bottom-line" src="images/Rectangle-42.png" alt="">
             <ul class="bottom-link">
-                <li><a href=""><img src="images/bottom-Vector.png" alt="linked in"></a></li>
-                <li><a href=""><img src="images/bottom-linkedin.png" alt=""></a></li>
+                <li><a href=""><img src="images/bottom-Vector.png" alt= "vector"></a></li>
+                <li><a href=""><img src="images/bottom-linkedin.png" alt="linkedin"></a></li>
                 <li><a href=""><img src="images/bottom-bunny.png" alt="git hub"></a></li>
                 <li><a href=""><img src="images/bottom-twitter.png" alt="twitter"></a></li>
-                <li><a href=""><img src="images/bottom-M.png" alt=""></a></li>
+                <li><a href=""><img src="images/bottom-M.png" alt="M"></a></li>
 
             </ul>
         </section>
