--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="hello">
         <div class="logo"><a href="">Johnson</a> </div>
         <nav> <a href=""><img class="image" src="images/Union.png" alt="dropdown"></a> </nav>
         <nav class="primary-nav">
@@ -20,9 +20,20 @@
             <a href=""><img class="msg-icon" src="images/msg-icon.png" alt="msg-icon"></a>
         </nav>
     </header>
+
     <main>
 
         <section class="headline">
+            <div class="menu-slider">
+                <div class="close"> <img src="images/X-button.svg" alt="close button"> </div>
+                <div class="menu-nav-item">
+                    <ul class="menu-navigation">
+                        <li class="menu-item"><a class="menu-links" href="#portfolio">Portfolio</a> </li>
+                        <li class="menu-item"><a class="menu-links" href="#about">About</a> </li>
+                        <li class="menu-item"><a class="menu-links" href="#contact">contact</a> </li>
+                    </ul>
+                </div>
+            </div>
             <ul class="desktop-links">
                 <li><a href=""><img src="images/Disabled.png" alt="linked in"></a></li>
                 <li><a href=""><img src="images/Enabled.png" alt="Enabled"></a></li>
@@ -35,7 +46,7 @@
                 <h2 class="greeting">Hey There. I'm Johnson</h2>
                 <p class="introduction-text"> I'm a software developer <br /></p>
                 <div class="description">
-                    I can help you build a product , feature or website Look through
+                    I can help you build a product , feature or website, Look through
                     some of my work and experience! If you like what you see and have a project you need coded,
                     don't hestiate to contact me.
 
@@ -54,7 +65,7 @@
         </section>
         <!-- Work section -->
 
-        <div class="first-project-container">
+        <div class="first-project-container" id="portfolio">
             <div class="projects">
                 <h3 class="recent-text">My Recent Works
                     <img class="line" src="images/Vector.png" alt="line">
@@ -172,7 +183,7 @@
 
 
         <!-- About me section -->
-        <div class="about-me-container">
+        <div class="about-me-container" id="About">
             <div class="about-me mobile">
                 <div class="support-text">
                     <h2 class="about-h">About Me</h2>
@@ -236,7 +247,7 @@
             </div>
         </div>
         <!-- Contact me section -->
-        <section class="cotact-me">
+        <section class="cotact-me" id="contact">
             <div class="contact-me-container">
                 <h1 class="contact-me-header-text">I'm always interested in hearing about new projects,
                     so if you'd like to chat please get in touch.</h1>
@@ -276,7 +287,7 @@
 
             <img class="bottom-line" src="images/Rectangle-42.png" alt="">
             <ul class="bottom-link">
-                <li><a href=""><img src="images/bottom-Vector.png" alt= "vector"></a></li>
+                <li><a href=""><img src="images/bottom-Vector.png" alt="vector"></a></li>
                 <li><a href=""><img src="images/bottom-linkedin.png" alt="linkedin"></a></li>
                 <li><a href=""><img src="images/bottom-bunny.png" alt="git hub"></a></li>
                 <li><a href=""><img src="images/bottom-twitter.png" alt="twitter"></a></li>
