Update index and style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <header id="hello">
         <div class="logo"><a href="">Johnson</a> </div>
-        <nav> <a href=""><img class="image" src="images/Union.png" alt="dropdown"></a> </nav>
+        <nav>
+            <img class="image" src="images/Union.png" alt="dropdown">
+        </nav>
         <nav class="primary-nav">
             <a href="">Portfolio</a>
             <a href="">About</a>
@@ -25,7 +27,9 @@
 
         <section class="headline">
             <div class="menu-slider">
-                <div class="close"> <img src="images/X-button.svg" alt="close button"> </div>
+                <div class="close">
+                    <img src="images/X-button.svg" alt="close button">
+                </div>
                 <div class="menu-nav-item">
                     <ul class="menu-navigation">
                         <li class="menu-item"><a class="menu-links" href="#portfolio">Portfolio</a> </li>
