--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="hello">
         <div class="logo"><a href="">Johnson</a> </div>
         <nav>
-            <img class="image" src="images/Union.png" alt="dropdown">
+            <img id="hamburgerBtn" class="image" src="images/Union.png" alt="dropdown">
         </nav>
         <nav class="primary-nav">
             <a href="">Portfolio</a>
@@ -28,13 +28,13 @@
         <section class="headline">
             <div class="menu-slider">
                 <div class="close">
-                    <img src="images/X-button.svg" alt="close button">
+                    <img id="closeBtn" src="images/X-button.svg" alt="close button">
                 </div>
                 <div class="menu-nav-item">
                     <ul class="menu-navigation">
-                        <li class="menu-item"><a class="menu-links" href="#portfolio">Portfolio</a> </li>
-                        <li class="menu-item"><a class="menu-links" href="#about">About</a> </li>
-                        <li class="menu-item"><a class="menu-links" href="#contact">contact</a> </li>
+                        <li class="menu-item"><a id="seePortfolio" class="menu-links" href="#portfolio">Portfolio</a> </li>
+                        <li class="menu-item"><a id="aboutMe" class="menu-links" href="#About">About</a> </li>
+                        <li class="menu-item"><a id="contactMe" class="menu-links" href="#contact">contact</a> </li>
                     </ul>
                 </div>
             </div>
@@ -300,6 +300,7 @@
             </ul>
         </section>
     </main>
+    <script src="script/main.js"></script>
 </body>
 
 </html>
