--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 </div>
                 <div class="menu-nav-item">
                     <ul class="menu-navigation">
-                        <li class="menu-item"><a id="seePortfolio" class="menu-links" href="#portfolio">Portfolio</a> </li>
+                        <li class="menu-item"><a id="seePortfolio" class="menu-links" href="#portfolio">Portfolio</a>
+                        </li>
                         <li class="menu-item"><a id="aboutMe" class="menu-links" href="#About">About</a> </li>
                         <li class="menu-item"><a id="contactMe" class="menu-links" href="#contact">contact</a> </li>
                     </ul>
@@ -68,6 +69,75 @@
 
         </section>
         <!-- Work section -->
+        <div class="popup-window" id="extended">
+            <div class="popup-holder">
+                <div class="popup">
+                    <div class="popup-header">
+                        <h5 id="mobileh5"></h5>
+                        <img src="images/X-button.svg" id="closeButton" alt="close">
+                    </div>
+                    <ul class="popup-boxes-container">
+                        <li class="popup-boxes">html</li>
+                        <li class="popup-boxes">CSS</li>
+                        <li class="popup-boxes">Javascript</li>
+                    </ul>
+                    <div class="popup-image " id="mobimage">
+                        <img src="images/Snapshoot-mobile.png" alt="post mobile">
+                    </div>
+                    <div class="popup-text">
+                    </div>
+                    <div class="popup-button-container">
+                        <a href="" id="seeMobLive">
+                            <div class="popup-button">See Live <img src="images/see-live.png" alt="see live"></div>
+                        </a>
+                        <a href="" id="seeMobSource">
+                            <div class="popup-button">See Source <img src="images/see-source.png" alt=" see live"></div>
+                        </a>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="popup-window-desktop" id="popupDesktop">
+            <div class="popup-holder-desktop">
+                <div class="popup-desktop">
+                    <div class="popup-header-desktop">
+                        <h5 class="desktop-h5"></h5>
+                        <img src="images/X-button.svg" id="closepopup" alt="close">
+                    </div>
+                    <ul class="popup-boxes-container-desktop">
+                        <li class="popup-boxes">html</li>
+                        <li class="popup-boxes">CSS</li>
+                        <li class="popup-boxes">Ruby on Rails</li>
+                    </ul>
+                    <div class="popup-content">
+                        <div class="popup-image" id="popupImageDesktop">
+                            <img src="images/Snapshoot-Portfolio.png" alt="post">
+
+                        </div>
+                        <div class="popup-content-holder">
+                            <div class="popup-text-window">
+                            </div>
+
+                            <div class="popup-button-container-desktop">
+                                <a href="" id="seeLive" class="popup-button">See Live <img src="images/see-live.png"
+                                        alt="see live">
+                                </a>
+                                <a href="" id="seeSource" class="popup-button">See Source <img
+                                        src="images/see-source.png" alt=" see source">
+                                </a>
+
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
 
         <div class="first-project-container" id="portfolio">
             <div class="projects">
@@ -78,7 +148,7 @@
                     <div class="orange-image"><img src="images/Img-Placeholder.png" alt="orange image"></div>
                     <div class="desktop-orange-image"> <img src="images/orange-image.png" alt="orange image"> </div>
                     <div class="orange-container">
-                        <h4>Multi-Post Stories</h4>
+                        <h4 id="multi">Multi-Post Stories</h4>
                         <p class="text">A daily selection of privately personalized reads; no accounts or sign-ups
                             required.
                             has been the industry's standard dummy text ever since the 1500s,
@@ -89,7 +159,7 @@
                             <li class="box"> CSS</li>
                             <li class="box"> Javascript</li>
                         </ul>
-                        <button class="recent-work-button" type="button">See project</button>
+                        <button class="recent-work-button" id="seeproject" type="button">See project</button>
                     </div>
                 </div>
 
@@ -109,7 +179,7 @@
                         <li class="boxes">Javascript</li>
                     </ul>
                 </div>
-                <button type="button" class="project-button">See Project</button>
+                <button type="button" class="project-button" id="seeproject1">See Project</button>
             </div>
             <div class="projects desktop">
                 <div class="stories-container">
@@ -123,7 +193,7 @@
                         <li class="boxes">Javascript</li>
                     </ul>
                 </div>
-                <button type="button" class="project-button">See Project</button>
+                <button type="button" class="project-button" id="seeproject2">See Project</button>
             </div>
             <div class="projects desktop">
                 <div class="stories-container">
@@ -139,7 +209,7 @@
 
 
                 </div>
-                <button type="button" class="project-button">See Project</button>
+                <button type="button" class="project-button" id="seeproject3">See Project</button>
             </div>
             <div class="projects desktop">
                 <div class="stories-container">
@@ -153,7 +223,7 @@
                         <li class="boxes">Javascript</li>
                     </ul>
                 </div>
-                <button type="button" class="project-button">See Project</button>
+                <button type="button" class="project-button" id="seeproject4">See Project</button>
             </div>
             <div class="projects desktop">
                 <div class="stories-container">
@@ -167,7 +237,7 @@
                         <li class="boxes">Javascript</li>
                     </ul>
                 </div>
-                <button type="button" class="project-button">See Project</button>
+                <button type="button" class="project-button" id="seeproject5">See Project</button>
             </div>
             <div class="projects desktop">
                 <div class="stories-container">
@@ -181,7 +251,7 @@
                         <li class="boxes">Javascript</li>
                     </ul>
                 </div>
-                <button type="button" class="project-button">See Project</button>
+                <button type="button" class="project-button" id="seeproject6">See Project</button>
             </div>
         </div>
 
