--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         <li class="popup-boxes">CSS</li>
                         <li class="popup-boxes">Javascript</li>
                     </ul>
-                    <div class="popup-image " id="mobimage">
-                        <img src="images/Snapshoot-mobile.png" alt="post mobile">
+                    <div class="popup-image " >
+                        <img id="mobimage" src="" alt="post mobile">
                     </div>
                     <div class="popup-text">
                     </div>
@@ -112,8 +112,8 @@
                         <li class="popup-boxes">Ruby on Rails</li>
                     </ul>
                     <div class="popup-content">
-                        <div class="popup-image" id="popupImageDesktop">
-                            <img src="images/Snapshoot-Portfolio.png" alt="post">
+                        <div class="popup-image" >
+                            <img id="popupImageDesktop" src="" alt="post">
 
                         </div>
                         <div class="popup-content-holder">
