--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
         </section>
         <!-- Work section -->
+        <!-- popup window -->
+        <!-- mobile popup -->
         <div class="popup-window" id="extended">
             <div class="popup-holder">
                 <div class="popup">
@@ -81,7 +83,7 @@
                         <li class="popup-boxes">CSS</li>
                         <li class="popup-boxes">Javascript</li>
                     </ul>
-                    <div class="popup-image " >
+                    <div class="popup-image ">
                         <img id="mobimage" src="" alt="post mobile">
                     </div>
                     <div class="popup-text">
@@ -99,6 +101,8 @@
             </div>
 
         </div>
+        <!-- mobile popup -->
+        <!-- desktop popup -->
         <div class="popup-window-desktop" id="popupDesktop">
             <div class="popup-holder-desktop">
                 <div class="popup-desktop">
@@ -112,7 +116,7 @@
                         <li class="popup-boxes">Ruby on Rails</li>
                     </ul>
                     <div class="popup-content">
-                        <div class="popup-image" >
+                        <div class="popup-image">
                             <img id="popupImageDesktop" src="" alt="post">
 
                         </div>
@@ -136,8 +140,9 @@
                 </div>
             </div>
         </div>
+        <!-- desktop popup -->
 
-
+        <!-- popup window -->
 
         <div class="first-project-container" id="portfolio">
             <div class="projects">
