--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <li class="popup-boxes">Javascript</li>
                     </ul>
                     <div class="popup-image ">
-                        <img id="mobimage" src="" alt="post mobile">
+                        <img id="mobimage" src="#" alt="post mobile">
                     </div>
                     <div class="popup-text">
                     </div>
@@ -117,7 +117,7 @@
                     </ul>
                     <div class="popup-content">
                         <div class="popup-image">
-                            <img id="popupImageDesktop" src="" alt="post">
+                            <img id="popupImageDesktop" src="#" alt="post">
 
                         </div>
                         <div class="popup-content-holder">
