--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         <!-- popup window -->
 
-        <div class="first-project-container" id="portfolio">
+        <div class="first-project-container " id="portfolio">
             <div class="projects">
                 <h3 class="recent-text">My Recent Works
                     <img class="line" src="images/Vector.png" alt="line">
@@ -173,7 +173,7 @@
 
         <div class="container">
             <div class="projects desktop">
-                <div class="stories-container">
+                <div class="stories-container one">
                     <h4 class="stories-head">Professional Art Printing Data</h4>
                     <p class="p-text">A daily selection of privately personalized reads;
                         no accounts or sign-ups required.
@@ -187,8 +187,8 @@
                 <button type="button" class="project-button" id="seeproject1">See Project</button>
             </div>
             <div class="projects desktop">
-                <div class="stories-container">
-                    <h4 class="stories-head">Professional Art Printing Data</h4>
+                <div class="stories-container two">
+                    <h4 class="stories-head">Data DashBoard HealthCare</h4>
                     <p class="p-text">A daily selection of privately personalized reads;
                         no accounts or sign-ups required.
                         has been the industry's standard</p>
@@ -201,8 +201,8 @@
                 <button type="button" class="project-button" id="seeproject2">See Project</button>
             </div>
             <div class="projects desktop">
-                <div class="stories-container">
-                    <h4 class="stories-head">Professional Art Printing Data</h4>
+                <div class="stories-container three">
+                    <h4 class="stories-head">Website Portfolio</h4>
                     <p class="p-text">A daily selection of privately personalized reads;
                         no accounts or sign-ups required.
                         has been the industry's standard</p>
@@ -217,7 +217,7 @@
                 <button type="button" class="project-button" id="seeproject3">See Project</button>
             </div>
             <div class="projects desktop">
-                <div class="stories-container">
+                <div class="stories-container one">
                     <h4 class="stories-head">Professional Art Printing Data</h4>
                     <p class="p-text">A daily selection of privately personalized reads;
                         no accounts or sign-ups required.
@@ -231,8 +231,8 @@
                 <button type="button" class="project-button" id="seeproject4">See Project</button>
             </div>
             <div class="projects desktop">
-                <div class="stories-container">
-                    <h4 class="stories-head">Professional Art Printing Data</h4>
+                <div class="stories-container two">
+                    <h4 class="stories-head">Data DashBoard HealthCare</h4>
                     <p class="p-text">A daily selection of privately personalized reads;
                         no accounts or sign-ups required.
                         has been the industry's standard</p>
@@ -245,8 +245,8 @@
                 <button type="button" class="project-button" id="seeproject5">See Project</button>
             </div>
             <div class="projects desktop">
-                <div class="stories-container">
-                    <h4 class="stories-head">Professional Art Printing Data</h4>
+                <div class="stories-container three">
+                    <h4 class="stories-head">Website Portfolio</h4>
                     <p class="p-text">A daily selection of privately personalized reads;
                         no accounts or sign-ups required.
                         has been the industry's standard</p>
