--- a/index.html
+++ b/index.html
@@ -330,21 +330,9 @@
             <div class="contact-me-container">
                 <h1 class="contact-me-header-text">I'm always interested in hearing about new projects,
                     so if you'd like to chat please get in touch.</h1>
-                <form action="https://formspree.io/f/mlezzzyn" method="post">
+                <form action="https://formspree.io/f/mlezzzyn" method="post" id="form">
 
                     <div class="form">
-                        <div class="li-container">
-
-                            <div> <label for="name"></label>
-                                <input type="text" id="first-name" name="first name" class="no-border first-name"
-                                    minlength="1" maxlength="30" placeholder="First name">
-                            </div>
-                            <div> <label for="name"></label>
-                                <input type="text" id="last-name" name="last name" class="no-border last-name"
-                                    minlength="1" maxlength="30" placeholder="Last name">
-                            </div>
-                        </div>
-
                         <label for="name"></label>
                         <input type="text" id="name" name="name" class="no-border name" minlength="1" maxlength="30"
                             placeholder="Full name" required>
@@ -358,9 +346,12 @@
                         <label for="msg"></label>
                         <textarea name="message" id="msg" class="msg" minlength="1" maxlength="500" required
                             placeholder="Enter text here"></textarea>
-
                     </div>
-                    <button class="form-button" type="submit">Get in touch</button>
+                    <div class="contain-error">
+                        <small id="error" class="error-message"></small>
+                        <button class="form-button" type="submit">Get in touch</button>
+                    </div>
+                  
                 </form>
             </div>
 
